[package]
name = "sub-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#eframe = "0.21.3"
#eframe = { path = "C:\\Users\\dunca\\Downloads\\egui\\crates\\eframe" }
#egui = { path = "C:\\Users\\dunca\\Downloads\\egui\\crates\\egui", features = ["serde"] }

eframe = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde" }
egui = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde", features = ["serde"] }
bincode = "1.3.3"