[package]
name = "sub-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#eframe = "0.21.3"
#eframe = { path = "C:\\Users\\dunca\\Downloads\\egui\\crates\\eframe" }
#egui = { path = "C:\\Users\\dunca\\Downloads\\egui\\crates\\egui", features = ["serde"] }

#eframe = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde-0.27.2" }
#egui = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde-0.27.2", features = ["serde"] }
#egui_demo_lib = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde-0.27.2" }

bincode = "1.3.3"
quicklz = "0.3.1"

eframe = { path = "../egui/crates/eframe" }
egui = { path = "../egui/crates/egui", features = ["serde"] }
egui_demo_lib = { path = "../egui/crates/egui_demo_lib" }
serde = { version = "1", features = ["derive"] } 
#serde_json = "1"
